# RAMDocs

./: LICENSE  RAMDocs_test.jsonl  RAMDocs_test.jsonl_madam_rag_Llama-3.3-70B-Instruct_rounds3.jsonl  README.md  main.py  pyproject.toml  requirements.txt  run_madam_rag.py
enh/baseline/: baseline.py
enh/baseline/results/: baseline_llama-3.3-70b-instruct.jsonl  baseline_llama-3.3-70b-instruct:free.jsonl
results/: RAMDocs_test.jsonl_baseline_llama-3.3-70b-instruct:free.jsonl
src/baseline/: __init__.py  baseline.py
src/data/split_data/: RAMDocs_test_test.jsonl  RAMDocs_test_train.jsonl
src/data/utils/: splitter.py
src/dspy/: testing1.ipynb
src/dspy/notebooks/: copro_predict.ipynb  miro_v2_cot.ipynb  simba_cot.ipynb  simba_predict.ipynb  threat_test.ipynb
src/dspy/saved_states/: copro_predict.json  miro_v2_predict.json  miro_v2_predict_test.json  simba_cot.json
src/models/: baseline.py
src/results/baseline/: baseline_test_results.jsonl
src/results/utils/: evaluator.py
src/utils/: llm_utils.py  openrouter_api_checker.py  pydantic_ai_llm_utils.py
utils/: openrouter_api_checker.py
