[project]
name = "ramdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.75.0",
    "promptflow-tracing>=1.17.2",
    "python-decouple>=3.8",
    "sentencepiece>=0.2.0",
    "torch==2.4.0",
    "transformers==4.49.0",
]
